--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "db:seed": "knex seed:run --cwd db",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "start": "nodemon",
-    "start:prod": "node app.js --prod",
+    "start:prod": "NODE_ENV=production node app.js --prod",
     "test": "mocha test/lifecycle.test.js test/integration/**/*.test.js test/utils/**/*.test.js"
   },
   "eslintConfig": {
