--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,7 +1,7 @@
 ## Required
 
-BASE_URL=http://localhost:1337
-DATABASE_URL=postgresql://postgres@localhost/planka
+BASE_URL=http://85.9.109.23:1337
+DATABASE_URL=postgresql://postgres@85.9.109.23/planka
 SECRET_KEY=notsecretkey
 
 ## Optional
@@ -63,7 +63,7 @@ SECRET_KEY=notsecretkey
 
 # Optional fields: accessToken, events, excludedEvents
 # WEBHOOKS='[{
-#   "url": "http://localhost:3001",
+#   "url": "http://85.9.109.23:3001",
 #   "accessToken": "notaccesstoken",
 #   "events": ["cardCreate", "cardUpdate", "cardDelete"],
 #   "excludedEvents": ["notificationCreate", "notificationUpdate"]
