--- a/client/package.json
+++ b/client/package.json
@@ -69,7 +69,6 @@
     "linkifyjs": "^4.1.4",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.8",
-    "node-sass": "^8.0.0",
     "photoswipe": "^5.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -96,6 +95,7 @@
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.8",
     "sails.io.js": "^1.2.1",
+    "sass": "^1.85.1",
     "semantic-ui-react": "^2.1.5",
     "socket.io-client": "^2.5.0",
     "validator": "^13.12.0",
