--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-shamsi/datepicker": "^0.2.1",
     "concurrently": "^8.2.2",
     "date-fns-jalali": "^4.1.0-0",
+    "dotenv": "^16.4.7",
     "genversion": "^3.2.0",
     "husky": "^9.1.7",
     "knex": "^3.1.0",
