--- a/.github/workflows/docker-image-v2.0.yml
+++ b/.github/workflows/docker-image-v2.0.yml
@@ -2,8 +2,7 @@ name: Publish Docker image to GHCR
 
 on:
   push:
-    tags:
-      - 'v*'  
+    branches: [ main ]  # Triggers when you push to the main branch
 
 jobs:
   build-and-push:
@@ -14,7 +13,7 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
@@ -27,16 +26,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract version from Git tag
-        id: extract_tag
-        run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-
       - name: Build and push multi-arch Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/rayarasana/rayatask-multidev:${{ steps.extract_tag.outputs.TAG }}
+            ghcr.io/rayarasana/rayatask-multidev:2.0
             ghcr.io/rayarasana/rayatask-multidev:latest
           platforms: linux/amd64,linux/arm64
