--- a/.github/workflows/docker-image-v2.0.yml
+++ b/.github/workflows/docker-image-v2.0.yml
@@ -32,6 +32,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/rayarasana/rayatask-multidev:2.1
-            ghcr.io/rayarasana/rayatask-multidev:latest
+            ghcr.io/rayarasana/rayatask:2.1
+            ghcr.io/rayarasana/rayatask:latest
           platforms: linux/amd64,linux/arm64
