--- a/.github/workflows/ver2.2.yml
+++ b/.github/workflows/ver2.2.yml
@@ -32,6 +32,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/rayarasana/rayatask:2.2
             ghcr.io/rayarasana/rayatask:latest
-          platforms: linux/amd64,linux/arm64
+            ghcr.io/rayarasana/rayatask:2.2.1
+          platforms: linux/amd64
